src/objects/Apttus_Config2__CostItem__c.object
<CustomObject>
    <description>Represents a product entry in a Cost Model.</description>
    <fields>
        <fullName>Apttus_Config2__CostModelId__c</fullName>
        <description>Id of the Cost Model associated with the Product&apos;s price list</description>
        <inlineHelpText>Id of the Cost Model associated with the Product&apos;s price list</inlineHelpText>
        <label>Cost Model</label>
        <referenceTo>Apttus_Config2__CostModel__c</referenceTo>
        <relationshipLabel>Cost Items</relationshipLabel>
        <relationshipName>CostItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CostPriceListItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the Price List Item of type Cost which won&apos;t have lookup to Product and will have a self-lookup to the related Price List Item for the given product</description>
        <inlineHelpText>Id of the Price List Item of type Cost which won&apos;t have lookup to Product and will have a self-lookup to the related Price List Item for the given product</inlineHelpText>
        <label>Cost Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Cost Items (Cost Price List Item)</relationshipLabel>
        <relationshipName>CostPriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CostTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the Cost Type associated with this Cost Item</description>
        <inlineHelpText>Id of the Cost Type associated with this Cost Item</inlineHelpText>
        <label>Cost Type</label>
        <referenceTo>Apttus_Config2__CostType__c</referenceTo>
        <relationshipLabel>Cost Items</relationshipLabel>
        <relationshipName>Cost_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListItemId__c</fullName>
        <description>Id of the Price List Item for corresponding charge type</description>
        <inlineHelpText>Id of the Price List Item for corresponding charge type</inlineHelpText>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Cost Items</relationshipLabel>
        <relationshipName>PriceListItems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product associated</description>
        <inlineHelpText>ID of the product associated</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cost Items</relationshipLabel>
        <relationshipName>CostItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cost Item</label>
    <nameField>
        <displayFormat>CI-{0000000000}</displayFormat>
        <label>Cost Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>